Adicionando Biblioteca de calculos

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,4 +27,5 @@ play-services-maps = { group = "com.google.android.gms", name = "play-services-m
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
 
